--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^5.2.0",
     "react-intl": "^2.4.0",
     "react-markdown": "^3.1.3",
+    "recompose": "^0.26.0",
     "victory": "^0.24.2"
   },
   "devDependencies": {
