--- a/data/2017/projects.json
+++ b/data/2017/projects.json
@@ -770,7 +770,8 @@
       "delta": 39908,
       "stars": 78243,
       "created_at": "2013-07-29T03:24:51.000Z",
-      "icon": "vue.svg"
+      "icon": "vue.svg",
+      "twitter": "vuejs"
     },
     {
       "name": "Web Starter Kit",
