--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-intl": "^2.4.0",
     "react-markdown": "^3.1.3",
     "recompose": "^0.26.0",
+    "tinytime": "^0.2.6",
+    "vague-time": "^2.4.1",
     "victory": "^0.24.2"
   },
   "devDependencies": {
