--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "numeral": "^2.0.6",
+    "react-ga": "^2.4.0",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.4.0",
     "react-markdown": "^3.1.3",
     "recompose": "^0.26.0",
     "tinytime": "^0.2.6",
-    "vague-time": "^2.4.1",
-    "victory": "^0.24.2"
+    "vague-time": "^2.4.1"
   },
   "devDependencies": {
     "jest": "^22.0.3"
