--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "latest",
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-netlify": "^1.0.12",
+    "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-sass": "^1.0.15",
     "gatsby-source-filesystem": "^2.0.0-alpha.1",
     "lodash.flatten": "^4.4.0",
