--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby-plugin-netlify": "^1.0.12",
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-sass": "^1.0.15",
-    "gatsby-source-filesystem": "^2.0.0-alpha.1",
+    "gatsby-source-filesystem": "1.5.14",
     "lodash.flatten": "^4.4.0",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
