--- a/data/settings.json
+++ b/data/settings.json
@@ -1,19 +1,10 @@
 [
   {
     "year": 2016,
-    "languages": [
-      "en",
-      "ja",
-      "zh"
-    ]
+    "languages": ["en", "ja", "zh"]
   },
   {
     "year": 2017,
-    "languages": [
-      "en",
-      "zh",
-      "fr",
-      "es"
-    ]
+    "languages": ["en", "zh", "ja", "fr", "es", "id"]
   }
 ]
