--- a/data/2016/projects.json
+++ b/data/2016/projects.json
@@ -2469,7 +2469,7 @@
       "created_at": "2015-05-21T22:43:05.000Z",
       "twitter": "gatsbyjs",
       "monthly": [382, 1042, 469, 279, 385, 1310, 175, 126, 182, 211, 235, 112],
-      "icon": "https://www.gatsbyjs.org/gatsby-negative.svg"
+      "icon": "gatsby.svg"
     },
     {
       "name": "React Starter Kit",
