2018 version first draft: add data and blank i18n files

--- a/data/settings.json
+++ b/data/settings.json
@@ -6,5 +6,9 @@
   {
     "year": 2017,
     "languages": ["en", "zh", "ja", "fr", "es", "id"]
+  },
+  {
+    "year": 2018,
+    "languages": ["en"]
   }
 ]
