--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "dependencies": {
     "flat": "^4.0.0",
-    "gatsby": "latest",
+    "gatsby": "1.9.172",
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-netlify": "^1.0.12",
     "gatsby-plugin-react-helmet": "^2.0.3",
@@ -23,6 +23,7 @@
     "react-intl": "^2.4.0",
     "react-markdown": "^3.1.3",
     "recompose": "^0.26.0",
+    "relay-compiler": "1.4.1",
     "tinytime": "^0.2.6",
     "vague-time": "^2.4.1"
   },
