--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-netlify": "^1.0.12",
     "gatsby-plugin-react-helmet": "^2.0.3",
-    "gatsby-plugin-sass": "^1.0.15",
+    "gatsby-plugin-sass": "1.0.15",
     "gatsby-source-filesystem": "1.5.15",
     "lodash.flatten": "^4.4.0",
     "lodash.get": "^4.4.2",
@@ -34,7 +34,7 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "build.ghpages": "gatsby build --prefix-paths",
-    "serve": "gatsby serve-build",
+    "serve": "gatsby serve",
     "clean": "bash scripts/clean-html.sh",
     "deploy": "node scripts/deploy-ghpages/index.js",
     "test": "jest test/**/*.test.js",
