--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "dependencies": {
     "flat": "^4.0.0",
-    "gatsby": "^1.9.279",
+    "gatsby": "1.9.172",
     "gatsby-link": "1.6.32",
     "gatsby-plugin-netlify": "^1.0.12",
     "gatsby-plugin-react-helmet": "^2.0.3",
