Fix React Native icon link

--- a/data/2018/projects.json
+++ b/data/2018/projects.json
@@ -2975,7 +2975,7 @@
         1264,
         1336
       ],
-      "icon": "react-native.png"
+      "icon": "react-native.svg"
     },
     {
       "name": "flowchart.js",
