--- a/data/2018/projects.json
+++ b/data/2018/projects.json
@@ -8639,7 +8639,7 @@
       "created_at": "2015-11-16T08:22:32.000Z",
       "twitter": "reasonml",
       "monthly": [133, 279, 192, 149, 165, 137, 208, 243, 150, 200, 286, 619],
-      "icon": "reason.png"
+      "icon": "reason.svg"
     },
     {
       "name": "ClojureScript",
