First commit of 2019 Rising Stars

--- a/data/settings.json
+++ b/data/settings.json
@@ -10,5 +10,9 @@
   {
     "year": 2018,
     "languages": ["en", "zh", "es"]
+  },
+  {
+    "year": 2019,
+    "languages": ["en", "zh", "es"]
   }
 ]
