feat(angular): write up summary for 2019

--- a/data/2019/projects.json
+++ b/data/2019/projects.json
@@ -1352,7 +1352,7 @@
       "url": "https://akveo.github.io/ngx-admin/"
     },
     {
-      "name": "Material Design for Angular",
+      "name": "Official Components for Angular",
       "full_name": "angular/components",
       "description": "Component infrastructure and Material Design components for Angular",
       "stars": 19222,
