--- a/data/settings.json
+++ b/data/settings.json
@@ -13,7 +13,11 @@
   },
   {
     "year": 2019,
-    "languages": ["en", "zh", "es", "ja"],
+    "languages": ["en", "zh", "es", "ja"]
+  },
+  {
+    "year": 2020,
+    "languages": ["en"],
     "current": true
   }
 ]
