Include Vite in Vue.js category

--- a/data/2020/projects.json
+++ b/data/2020/projects.json
@@ -382,7 +382,7 @@
       "stars": 14138,
       "delta": 14094,
       "monthly": [761, 647, 806, 1457, 923, 1761, 1888],
-      "tags": ["build"],
+      "tags": ["build", "vue"],
       "owner_id": 65625612,
       "created_at": "2020-04-21T05:03:57.000Z"
     },
