--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/theme-tools": "1.0.0",
     "@emotion/react": "11.1.1",
     "@emotion/styled": "11.0.0",
+    "@formatjs/intl-numberformat": "^6.1.3",
     "@types/flat": "^5.0.1",
     "@types/fs-extra": "^9.0.6",
     "@types/lodash": "^4.14.166",
