Remove unused deps

--- a/package.json
+++ b/package.json
@@ -7,22 +7,16 @@
     "start": "next dev"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.0",
-    "@chakra-ui/react": "^1.0.0",
-    "@chakra-ui/theme-tools": "1.0.0",
-    "@emotion/react": "11.1.1",
-    "@emotion/styled": "11.0.0",
     "@types/flat": "^5.0.1",
     "@types/fs-extra": "^9.0.6",
     "@types/lodash": "^4.14.166",
     "@types/lodash.flatten": "^4.4.6",
     "flat": "^5.0.2",
-    "framer-motion": "^2.9.4",
     "fs-extra": "^9.0.1",
     "jdown": "^1.0.4",
     "lodash.flatten": "^4.4.0",
     "lodash.get": "^4.4.2",
-    "next": "latest",
+    "next": "^10.0.5",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
