Fix GitHub/GitLab spelling (#65)

--- a/data/2018/projects.json
+++ b/data/2018/projects.json
@@ -2381,7 +2381,7 @@
       "name": "react-color",
       "url": "http://casesandberg.github.io/react-color/",
       "full_name": "casesandberg/react-color",
-      "description": ":art: Color Pickers from Sketch, Photoshop, Chrome, Github, Twitter & more",
+      "description": ":art: Color Pickers from Sketch, Photoshop, Chrome, GitHub, Twitter & more",
       "owner_id": 4633636,
       "tags": ["react"],
       "delta": 1656,
