--- a/data/2016/projects.json
+++ b/data/2016/projects.json
@@ -1989,7 +1989,7 @@
       "url": "http://casesandberg.github.io/react-color/",
       "full_name": "casesandberg/react-color",
       "description":
-        ":art: Color Pickers from Sketch, Photoshop, Chrome, Github, Twitter & more",
+        ":art: Color Pickers from Sketch, Photoshop, Chrome, GitHub, Twitter & more",
       "owner_id": 4633636,
       "tags": ["react"],
       "delta": 1472,
